--- a/Main/Tabs/IsabellasLullaby.html
+++ b/Main/Tabs/IsabellasLullaby.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Main/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="style.css">
     
 </head>
@@ -13,7 +13,7 @@
         <h1>Game-Inspired Guitar Tabs</h1>
         <nav>
           <ul>
-            <li><a href="/Main/index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="IsabellasLullaby.html">Tabs</a></li>
             <li><a href="#tutorials">Tutorials</a></li>
             <li><a href="#contact">Contact</a></li>
