--- a/Main/index.html
+++ b/Main/index.html
@@ -11,7 +11,7 @@
     <h1>Game/Anime-Inspired Guitar Tabs</h1>
     <nav>
       <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Tabs/IsabellasLullaby.html">Tabs</a></li>
         <li><a href="#tutorials">Tutorials</a></li>
         <li><a href="#contact">Contact</a></li>
