Added Merry Go Round of Life

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Game-Inspired Guitar Tabs</title>
+  <title>Sixxy Tabs</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Tabs/IsabellasLullaby.html">Tabs</a></li>
+        <li><a href="#">Tabs</a></li>
         <li><a href="#tutorials">Tutorials</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -28,7 +28,7 @@
       <h3><a href="Tabs/IsabellasLullaby.html" id="PreviewHRef">The Promised Neverland - Isabella's Lullaby</a></h3>
     </div>
     <div class="tab">
-      <h3>Final Fantasy VII - Aerith's Theme</h3>
+      <h3><a href="Tabs/HowlsMovingCastle.html" id="PreviewHRef">Howl's Moving Castle - Merry Go Round of Life</a></h3>
     </div>
     <!-- Add more tabs here -->
   </section>
