--- a/Tabs/LaFastin-Ratatouille.html
+++ b/Tabs/LaFastin-Ratatouille.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Game-Inspired Guitar Tabs</h1>
+        <h1>Sixxy's Tabs</h1>
         <nav>
           <ul>
             <li><a href="/index.html">Home</a></li>
@@ -21,7 +21,7 @@
 
 <div class="pdfContainer">
 
-  <embed src="https://drive.google.com/file/d/1dlRdmRCBWZdMzibz_lSU7nJW-Gb4JZdW/preview?usp=sharing" width="100%" height="100%">
+  <embed src="https://drive.google.com/file/d/1rF7SKN6VD_zl11oRdmGwyFe3H4Zk57EA/preview?usp=sharing" width="100%" height="100%">
 </div>
 </body>
 </html>
