--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <header>
-    <h1>Game/Anime-Inspired Guitar Tabs</h1>
+    <h1>Sixxy's Tabs</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Tabs</a></li>
-        <li><a href="#tutorials">Tutorials</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="/Tabs/TabIndex.html">Tabs</a></li>
+        <!-- <li><a href="#tutorials">Tutorials</a></li>
+        <li><a href="#contact">Contact</a></li> -->
       </ul>
     </nav>
   </header>
@@ -30,15 +30,18 @@
     <div class="tab">
       <h3><a href="Tabs/HowlsMovingCastle.html" id="PreviewHRef">Howl's Moving Castle - Merry Go Round of Life</a></h3>
     </div>
+    <div class="tab">
+      <h3><a href="Tabs/drunk.html" id ="PreviewHRef">Drunk - Keshi</a></h3>
+  </div>
     <!-- Add more tabs here -->
-  </section>
-  <section id="tutorials">
-    <h2>Tutorials</h2>
-    <p>Coming soon...</p>
   </section>
   <section id="contact">
     <h2>Contact</h2>
-    <p>Feel free to reach out with your own tabs or suggestions!</p>
+    <p>Feel free to reach out with your own tabs or suggestions!
+      <br>
+      Send an email to "tfsixxy@gmail.com"
+
+    </p>
   </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   <script src="script.js"></script>
