--- a/Tabs/HowlsMovingCastle.html
+++ b/Tabs/HowlsMovingCastle.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Game-Inspired Guitar Tabs</h1>
+        <h1>Sixxy's Tabs</h1>
         <nav>
           <ul>
             <li><a href="/index.html">Home</a></li>
