--- a/Tabs/IsabellasLullaby.html
+++ b/Tabs/IsabellasLullaby.html
@@ -6,6 +6,7 @@
     <title>Isabella's Lullaby Tabs</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/img/Sixxy.png" type="image/icon type">
     
 </head>
 <body>
@@ -14,7 +15,7 @@
         <nav>
           <ul>
             <li><a href="/index.html">Home</a></li>
-            <li><a href="#">Tabs</a></li>
+            <li><a href="TabIndex.html">Tabs</a></li>
           </ul>
         </nav>
       </header>
