--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sixxy Tabs</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="/img/Sixxy.png" type="image/icon type">
+
 </head>
 <body>
   <header>
